--- a/src/encoded/static/scss/encoded/modules/_facet.scss
+++ b/src/encoded/static/scss/encoded/modules/_facet.scss
@@ -1,7 +1,5 @@
 .box {
-    padding: 10px;
-    border: 1px #ccc solid;
-    border-radius: 3px;
+    border-right: 1px #ccc solid;
     overflow: hidden;
 }
 
