--- a/src/encoded/static/scss/style.scss
+++ b/src/encoded/static/scss/style.scss
@@ -18,6 +18,11 @@ $brand-success: #4C994C;
 $brand-danger: #B24342;
 $brand-info: #4F689E;
 
+$panel-data-bg: #fff;
+$panel-data-border: #c0c0c0;
+$panel-data-heading-bg: #e8e8e8;
+$panel-data-heading-fg: #606060;
+
 // Core variables and mixins
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
