--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -1,5 +1,5 @@
 /* Variables */
-$mainThemeColor: 			#e8ecef; /* i.e. the background color ..for now */
+$mainThemeColor: 			#f8f8f8; /* i.e. the background color ..for now */
 
 $footerHeight: 				80px;
 $footerTopBorderHeight:		0px;
@@ -11,7 +11,10 @@ $tableHeadFootBackgroundColor: #f5f5f5;
 /* BASE STYLES */
 /* Note: most base styles handled by Bootstrap, with variable settings in bootstrap/_variables.scss */
 
-body { background: $mainThemeColor; }
+body {
+    background: $mainThemeColor;
+    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+}
 
 .float-wrap { overflow: hidden; }
 
@@ -51,4 +54,9 @@ figure {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+@mixin font-size($sizeValue: 1.6) {
+  font-size: ($sizeValue * 10) + px;
+  font-size: $sizeValue + rem;
 }
