--- a/src/encoded/static/scss/encoded/modules/_panels.scss
+++ b/src/encoded/static/scss/encoded/modules/_panels.scss
@@ -1,29 +1,31 @@
 /* Panels */
 .panel {
-    background-color: #fff;
-    border: 1px solid #a0a0a0;
-    @include border-radius($border-radius-base);
-    @include box-shadow(0 0 6px rgba(195, 202, 211, 0.5));
+    background-color: $panel-data-bg;
+    border: 1px solid $panel-data-border;
     margin-top: 10px;
-    margin-bottom: 20px;
-    padding: 15px 30px;
+    margin-bottom: 10px;
     overflow: visible;
+    @include font-size(1.2);
 }
 
-.panel-blue {
-background-color: #4284d8;
-border: 1px solid #3276ca;
-    @include border-radius($border-radius-base);
-    @include box-shadow(0 0 6px rgba(195, 202, 211, 0.5));
-    margin: 10px 0 20px;
-    padding: 15px 30px;
-    overflow: hidden;
+.panel-heading {
+    color: $panel-data-heading-fg;
+    background-color: $panel-data-heading-bg;
+    border-bottom: 1px solid $panel-data-border;
+
+    h3 {
+        margin: 0;
+        font-size: 1.5em;
+    }
 }
 
-.panel-gray {
-    margin: 10px 0 20px;
+.panel-body {
     padding: 15px 30px;
-    overflow: hidden;
+}
+
+.panel.type-document {
+    border: none;
+    margin-bottom: 0;
 }
 
 .panel h3, .panel h4 {color: #0A253D;}
