--- a/src/encoded/static/scss/encoded/modules/_breadcrumbs.scss
+++ b/src/encoded/static/scss/encoded/modules/_breadcrumbs.scss
@@ -1,7 +1,7 @@
 /* overwrites some Bootstrap defaults */
 .breadcrumb {
-	padding: 5px 15px;
-    background-color: rgba(10, 37, 61, 0.03);
+	padding: 5px 0;
+    background-color: transparent;
     text-transform: capitalize;
     color: #707070;
     > li {
