First pass of search result matching UI

--- a/src/encoded/static/scss/encoded/modules/_facet.scss
+++ b/src/encoded/static/scss/encoded/modules/_facet.scss
@@ -270,3 +270,13 @@ span.bar {
         border: none;
     }
 }
+
+
+// Styles for search result highlights
+.highlights {
+    margin: 0 25px;
+
+    h4 {
+        font-size: 14px;
+    }
+}
